--- a/EN/about.html
+++ b/EN/about.html
@@ -37,18 +37,18 @@
     <main>
       <section id="sobre">
         <div class="sobredv">
-          <div data-aos="zoom-out" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobredv0">
+          <div class="sobredv0">
             <img class="sobrehero" src="../images/bg3.webp">
           </div>
           <h2 data-aos="flip-left" data-aos-delay="700" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobrett1">About Us</h2>
         </div>
         <div class="sobredv1">
           <div class="sobredv12">
-            <p class="sobretx">APAV - Associação Projeto Alcançando Vidas (Reaching Lives Project Association) is a missionary and humanitarian initiative dedicated to bringing love, hope and transformation to those who need it most. Founded with the purpose of sharing the gospel of Jesus Christ, APAV works with people in situations of extreme vulnerability, including homeless people, former drug addicts, indigenous peoples, sertanejos, quilombolas and many other needy peoples around the world.</Video></p>
+            <p class="sobretx" data-aos="fade-up" data-aos-easing="ease-in-out">APAV - Associação Projeto Alcançando Vidas (Reaching Lives Project Association) is a missionary and humanitarian initiative dedicated to bringing love, hope and transformation to those who need it most. Founded with the purpose of sharing the gospel of Jesus Christ, APAV works with people in situations of extreme vulnerability, including homeless people, former drug addicts, indigenous peoples, sertanejos, quilombolas and many other needy peoples around the world.</Video></p>
           </div>
           <div id="presta">
-            <h2 class="subtitulo" style="margin:5vw 0 0 0;color:#FFFFFF">Our daily life</h2>
-            <div class="slideres">
+            <h2 class="subtitulo" data-aos="fade-up" data-aos-easing="ease-in-out">Our daily life</h2>
+            <div class="slideres" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="slide-track">
                     <div class="slides"><img class="slidesimages" src="../images/carrousel/1.webp" alt="IMAGEM 1"></div>
                     <div class="slides"><img class="slidesimages" src="../images/carrousel/2.webp" alt="IMAGEM 2"></div>
@@ -86,52 +86,52 @@
             </div>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">In addition, the Association has a team of health care volunteers who provide care in our office to support these families. Our professionals include doctors, psychologists and speech therapists. In addition to providing immediate assistance, the Association is always looking for ways to reintegrate these people into society, providing new goals and hope through our work.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">In addition, the Association has a team of health care volunteers who provide care in our office to support these families. Our professionals include doctors, psychologists and speech therapists. In addition to providing immediate assistance, the Association is always looking for ways to reintegrate these people into society, providing new goals and hope through our work.</p>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">With actions carried out in countries such as Brazil, Bolivia, Paraguay, Chile, Africa, among others, the Reaching Lives Project is dedicated to reaching the most remote corners and the most marginalized populations. Through visits, distribution of food, clothing, and medical services, the project strives to make a difference in the lives of those who live on the streets or in conditions of extreme poverty.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">With actions carried out in countries such as Brazil, Bolivia, Paraguay, Chile, Africa, among others, the Reaching Lives Project is dedicated to reaching the most remote corners and the most marginalized populations. Through visits, distribution of food, clothing, and medical services, the project strives to make a difference in the lives of those who live on the streets or in conditions of extreme poverty.</p>
           </div>
           <div class="sobredv2">
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/brazil.svg">
-              <h3 class="tt5">Brazil</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/brazil.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Brazil</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/bolivia.svg">
-              <h3 class="tt5">Bolivia</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/bolivia.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Bolivia</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/paraguai.svg">
-              <h3 class="tt5">Paraguay</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/paraguai.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Paraguay</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/chile.svg">
-              <h3 class="tt5">Chile</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/chile.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Chile</h3>
             </div>
             <div class="sobredv212">
-              <img class="sobreim3" src="../images/africa.svg">
-              <h3 class="tt5">African Continent</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/africa.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">African Continent</h3>
             </div>
           </div>
           
           <div class="sobredv4">
-            <p class="sobretx1">Volunteers/missionaries are the heart of this project, driven by love and a genuine desire to help others, following the example of Christ, who showed no partiality to anyone. With dedication and compassion, they offer their time, talents and efforts to transform lives, without expecting anything in return. Their commitment goes beyond providing assistance; they bring hope, comfort and dignity to those who need it most. Every gesture, no matter how small, reflects the true meaning of loving others and makes a difference in the journey of those seeking a new chance.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Volunteers/missionaries are the heart of this project, driven by love and a genuine desire to help others, following the example of Christ, who showed no partiality to anyone. With dedication and compassion, they offer their time, talents and efforts to transform lives, without expecting anything in return. Their commitment goes beyond providing assistance; they bring hope, comfort and dignity to those who need it most. Every gesture, no matter how small, reflects the true meaning of loving others and makes a difference in the journey of those seeking a new chance.</p>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">With an approach centered on the love and sacrifice of Jesus, who gave his life to save humanity, the Association seeks to reach those who are often forgotten by society. The goal is not only to offer spiritual comfort, but also to restore dignity and promote transformation through welfare support.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">With an approach centered on the love and sacrifice of Jesus, who gave his life to save humanity, the Association seeks to reach those who are often forgotten by society. The goal is not only to offer spiritual comfort, but also to restore dignity and promote transformation through welfare support.</p>
           </div>
           <div class="sobredv3">
-            <img class="sobreim3" src="../images/christ.svg">
-            <img class="sobreim3" src="../images/equal.svg">
-            <img class="sobreim3" src="../images/heartchrist.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/christ.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/equal.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/heartchrist.svg">
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Join us in this mission of transformation! Together, we can impact the lives of thousands of people, bringing hope, renewal and the love of Christ to those who need it most. Be part of this change!</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Join us in this mission of transformation! Together, we can impact the lives of thousands of people, bringing hope, renewal and the love of Christ to those who need it most. Be part of this change!</p>
           </div>
-          <a class="sobrebt">I WANT TO BE A VOLUNTEER<br><img class="sobreim2" src="../images/heart.svg"></a>
+          <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20I%20want%20to%20be%20a%20volunteer%20for%20the%20project,%20how%20can%20I%20apply?" class="sobrebt" target="_blank">I WANT TO BE A VOLUNTEER<br><img class="sobreim2" src="../images/heart.svg"></a>
         </div>
       </section>
-      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20would%20like%20to%20know%20more%20about%20the%20project!" target="_blank">
         <img class="whats" src="../images/whats.svg">
       </a>
       <div class="loading">
@@ -143,31 +143,31 @@
           <div class="letter">s</div>
         </div>
         <div class="word">
-          <div class="letter">O </div>
-          <div class="letter"> C</div>
-          <div class="letter">a</div>
-          <div class="letter">m</div>
-          <div class="letter">i</div>
-          <div class="letter">n</div>
+          <div class="letter">T</div>
           <div class="letter">h</div>
-          <div class="letter">o</div>
+          <div class="letter">e </div>
+          <div class="letter"> W</div>
+          <div class="letter">a</div>
+          <div class="letter">y</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
-          <div class="letter"> V</div>
-          <div class="letter">e</div>
+          <div class="letter">T</div>
+          <div class="letter">h</div>
+          <div class="letter">e </div>
+          <div class="letter"> T</div>
           <div class="letter">r</div>
-          <div class="letter">d</div>
-          <div class="letter">a</div>
-          <div class="letter">d</div>
-          <div class="letter">e</div>
+          <div class="letter">u</div>
+          <div class="letter">t</div>
+          <div class="letter">h</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
-          <div class="letter"> V</div>
+          <div class="letter">T</div>
+          <div class="letter">h</div>
+          <div class="letter">e </div>
+          <div class="letter"> L</div>
           <div class="letter">i</div>
-          <div class="letter">d</div>
-          <div class="letter">a</div>
+          <div class="letter">f</div>
+          <div class="letter">e</div>
         </div>
         <div class="word"></div>
         <div class="word"></div>
