--- a/EN/donate.html
+++ b/EN/donate.html
@@ -10,14 +10,14 @@
     <!--|Meta Config.|-->
 
     <!--|Title Tab|-->
-    <title>APAV | Donations</title>
+    <title>APAV | Donaciones</title>
     <!--|Title Tab|-->
 
     <!--|Import|-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
     <script>
       AOS.init();
     </script>
@@ -36,18 +36,18 @@
    
     <main>
         <section id="doar">
-          <h2 class="doartt1">Doações | Donaciones | Donations</h2>
-          <h3 class="doartt1">PIX</h3>
+          <h2 class="doartt1" data-aos="fade-up" data-aos-easing="ease-in-out">Doações | Donaciones | Donations</h2>
+          <h3 class="doartt1" data-aos="fade-up" data-aos-easing="ease-in-out">PIX</h3>
           <div class="doardv0">
             <div class="doardv01">
-              <img class="doarim0" src="../images/doar1.webp">
-              <img class="doarim0" src="../images/doar10.webp">
-              <img class="doarim0" src="../images/doar13.webp">
-              <img class="doarim0" src="../images/doar25.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar1.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar2.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar3.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar4.webp">
             </div>
             <div class="doardv1">
               <div class="doardv2">
-                <img class="doarim2" src="../images/qrcode.jpeg">
+                <img class="doarim2" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/qrcode.jpeg">
               </div>
               <!--
               <div>
@@ -57,14 +57,14 @@
               -->
             </div>
             <div class="doardv01">
-              <img class="doarim0" src="../images/doar9.webp">
-              <img class="doarim0" src="../images/doar5.webp">
-              <img class="doarim0" src="../images/doar20.webp">
-              <img class="doarim0" src="../images/doar7.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar5.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar6.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar7.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar8.webp">
             </div>
           </div>
         </section>
-        <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20would%20like%20to%20know%20more%20about%20the%20project!" target="_blank">
           <img class="whats" src="../images/whats.svg">
         </a>
         <div class="loading">
@@ -76,31 +76,31 @@
             <div class="letter">s</div>
           </div>
           <div class="word">
-            <div class="letter">O </div>
-            <div class="letter"> C</div>
-            <div class="letter">a</div>
-            <div class="letter">m</div>
-            <div class="letter">i</div>
-            <div class="letter">n</div>
+            <div class="letter">T</div>
             <div class="letter">h</div>
-            <div class="letter">o</div>
+            <div class="letter">e </div>
+            <div class="letter"> W</div>
+            <div class="letter">a</div>
+            <div class="letter">y</div>
           </div>
           <div class="word">
-            <div class="letter">A </div>
-            <div class="letter"> V</div>
-            <div class="letter">e</div>
+            <div class="letter">T</div>
+            <div class="letter">h</div>
+            <div class="letter">e </div>
+            <div class="letter"> T</div>
             <div class="letter">r</div>
-            <div class="letter">d</div>
-            <div class="letter">a</div>
-            <div class="letter">d</div>
-            <div class="letter">e</div>
+            <div class="letter">u</div>
+            <div class="letter">t</div>
+            <div class="letter">h</div>
           </div>
           <div class="word">
-            <div class="letter">A </div>
-            <div class="letter"> V</div>
+            <div class="letter">T</div>
+            <div class="letter">h</div>
+            <div class="letter">e </div>
+            <div class="letter"> L</div>
             <div class="letter">i</div>
-            <div class="letter">d</div>
-            <div class="letter">a</div>
+            <div class="letter">f</div>
+            <div class="letter">e</div>
           </div>
           <div class="word"></div>
           <div class="word"></div>
