--- a/ES/sobre.html
+++ b/ES/sobre.html
@@ -37,18 +37,18 @@
     <main>
       <section id="sobre">
         <div class="sobredv">
-          <div data-aos="zoom-out" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobredv0">
+          <div class="sobredv0">
             <img class="sobrehero" src="../images/bg3.webp">
           </div>
           <h2 data-aos="flip-left" data-aos-delay="700" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobrett1">Sobre Nosotros</h2>
         </div>
         <div class="sobredv1">
           <div class="sobredv12">
-            <p class="sobretx">APAV - Associação Projeto Alcançando Vidas (Asociación Proyecto Alcanzando Vidas) es una iniciativa misionera y humanitaria dedicada a llevar amor, felicidad y transformación a quienes más lo necesitan. Fundada con el propósito de compartir el evangelio de Jesucristo, APAV trabaja con personas en situaciones de extrema vulnerabilidad, incluidas personas sin hogar, ex drogadictos, pueblos indígenas, campesinos, quilombolas y varias otras personas necesitadas en todo el mundo.</Video></p>
+            <p class="sobretx" data-aos="fade-up" data-aos-easing="ease-in-out">APAV - Associação Projeto Alcançando Vidas (Asociación Proyecto Alcanzando Vidas) es una iniciativa misionera y humanitaria dedicada a llevar amor, felicidad y transformación a quienes más lo necesitan. Fundada con el propósito de compartir el evangelio de Jesucristo, APAV trabaja con personas en situaciones de extrema vulnerabilidad, incluidas personas sin hogar, ex drogadictos, pueblos indígenas, campesinos, quilombolas y varias otras personas necesitadas en todo el mundo.</Video></p>
           </div>
           <div id="presta">
-            <h2 class="subtitulo" style="margin:5vw 0 0 0;color:#FFFFFF">NUESTRO DÍA A DÍA</h2>
-            <div class="slideres">
+            <h2 class="subtitulo" data-aos="fade-up" data-aos-easing="ease-in-out">NUESTRO DÍA A DÍA</h2>
+            <div class="slideres" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="slide-track">
                     <div class="slides"><img class="slidesimages" src="../images/carrousel/1.webp" alt="IMAGEM 1"></div>
                     <div class="slides"><img class="slidesimages" src="../images/carrousel/2.webp" alt="IMAGEM 2"></div>
@@ -86,52 +86,52 @@
             </div>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Además, la Asociación cuenta con un equipo de voluntarios sanitarios, que ofrecen atención en nuestra oficina para apoyar a estas familias. Entre los profesionales contamos con médicos, psicólogos y logopedas. Además de la asistencia inmediata, la Asociación siempre busca formas de reintegrar a estas personas a la sociedad, brindándoles nuevas metas y esperanzas a través del trabajo.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Además, la Asociación cuenta con un equipo de voluntarios sanitarios, que ofrecen atención en nuestra oficina para apoyar a estas familias. Entre los profesionales contamos con médicos, psicólogos y logopedas. Además de la asistencia inmediata, la Asociación siempre busca formas de reintegrar a estas personas a la sociedad, brindándoles nuevas metas y esperanzas a través del trabajo.</p>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Con acciones realizadas en países como Brasil, Bolivia, Paraguay, Chile, África, entre otros, el Proyecto Alcançando Vidas se dedica a llegar a los rincones más remotos y a las poblaciones más marginadas. A través de visitas, distribución de alimentos, ropa y servicios médicos, el proyecto busca marcar una diferencia en la vida de quienes viven en la calle o en condiciones de extrema pobreza.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Con acciones realizadas en países como Brasil, Bolivia, Paraguay, Chile, África, entre otros, el Proyecto Alcançando Vidas se dedica a llegar a los rincones más remotos y a las poblaciones más marginadas. A través de visitas, distribución de alimentos, ropa y servicios médicos, el proyecto busca marcar una diferencia en la vida de quienes viven en la calle o en condiciones de extrema pobreza.</p>
           </div>
           <div class="sobredv2">
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/brazil.svg">
-              <h3 class="tt5">Brasil</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/brazil.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Brasil</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/bolivia.svg">
-              <h3 class="tt5">Bolívia</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/bolivia.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Bolívia</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/paraguai.svg">
-              <h3 class="tt5">Paraguay</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/paraguai.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Paraguay</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="../images/chile.svg">
-              <h3 class="tt5">Chile</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/chile.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Chile</h3>
             </div>
             <div class="sobredv212">
-              <img class="sobreim3" src="../images/africa.svg">
-              <h3 class="tt5">Continente Africano</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/africa.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Continente Africano</h3>
             </div>
           </div>
           
           <div class="sobredv4">
-            <p class="sobretx1">Los voluntarios/misioneros son el corazón de este proyecto, impulsados ​​por el amor y el deseo genuino de ayudar a los demás, teniendo un espejo de Cristo que no hacía acepción de nadie. Con dedicación y compasión, ofrecen su tiempo, talentos y esfuerzos para transformar vidas, sin esperar nada a cambio. Su compromiso va más allá de la asistencia; traen esperanza, consuelo y dignidad a quienes más lo necesitan. Cada gesto, por pequeño que sea, refleja el verdadero significado del amor por los demás y marca la diferencia en el viaje de quienes buscan una nueva oportunidad.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Los voluntarios/misioneros son el corazón de este proyecto, impulsados ​​por el amor y el deseo genuino de ayudar a los demás, teniendo un espejo de Cristo que no hacía acepción de nadie. Con dedicación y compasión, ofrecen su tiempo, talentos y esfuerzos para transformar vidas, sin esperar nada a cambio. Su compromiso va más allá de la asistencia; traen esperanza, consuelo y dignidad a quienes más lo necesitan. Cada gesto, por pequeño que sea, refleja el verdadero significado del amor por los demás y marca la diferencia en el viaje de quienes buscan una nueva oportunidad.</p>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Con un enfoque centrado en el amor y sacrificio de Jesús, quien dio su vida para salvar a la humanidad, la Asociación busca llegar a aquellos que muchas veces son olvidados por la sociedad. El objetivo no es sólo ofrecer consuelo espiritual, sino también restaurar la dignidad y promover la transformación a través del apoyo asistencial.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Con un enfoque centrado en el amor y sacrificio de Jesús, quien dio su vida para salvar a la humanidad, la Asociación busca llegar a aquellos que muchas veces son olvidados por la sociedad. El objetivo no es sólo ofrecer consuelo espiritual, sino también restaurar la dignidad y promover la transformación a través del apoyo asistencial.</p>
           </div>
           <div class="sobredv3">
-            <img class="sobreim3" src="../images/christ.svg">
-            <img class="sobreim3" src="../images/equal.svg">
-            <img class="sobreim3" src="../images/heartchrist.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/christ.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/equal.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/heartchrist.svg">
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">¡Únase a nosotros en esta misión de transformación! Unidos, podemos impactar la vida de miles de personas, llevando esperanza, renovación y el amor de Cristo a quienes más lo necesitan. ¡Sé parte de este cambio!</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">¡Únase a nosotros en esta misión de transformación! Unidos, podemos impactar la vida de miles de personas, llevando esperanza, renovación y el amor de Cristo a quienes más lo necesitan. ¡Sé parte de este cambio!</p>
           </div>
-          <a class="sobrebt">QUIERO SER VOLUNTARIO<br><img class="sobreim2" src="../images/heart.svg"></a>
+          <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20llegué%20a%20través%20de%20su%20sitio%20web%20y%20quiero%20ser%20voluntario%20en%20el%20proyecto,%20¿cómo%20puedo%20postularme?" class="sobrebt" target="_blank">QUIERO SER VOLUNTARIO<br><img class="sobreim2" src="../images/heart.svg"></a>
         </div>
       </section>
-      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
         <img class="whats" src="../images/whats.svg">
       </a>
       <div class="loading">
@@ -143,27 +143,28 @@
           <div class="letter">s</div>
         </div>
         <div class="word">
-          <div class="letter">O </div>
+          <div class="letter">E</div>
+          <div class="letter">l </div>
           <div class="letter"> C</div>
           <div class="letter">a</div>
           <div class="letter">m</div>
           <div class="letter">i</div>
           <div class="letter">n</div>
-          <div class="letter">h</div>
           <div class="letter">o</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
+          <div class="letter">L</div>
+          <div class="letter">a </div>
           <div class="letter"> V</div>
           <div class="letter">e</div>
           <div class="letter">r</div>
           <div class="letter">d</div>
           <div class="letter">a</div>
           <div class="letter">d</div>
-          <div class="letter">e</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
+          <div class="letter">L</div>
+          <div class="letter">a </div>
           <div class="letter"> V</div>
           <div class="letter">i</div>
           <div class="letter">d</div>
