--- a/doar.html
+++ b/doar.html
@@ -36,18 +36,18 @@
    
     <main>
         <section id="doar">
-          <h2 class="doartt1">Doações | Donaciones | Donations</h2>
-          <h3 class="doartt1">PIX</h3>
+          <h2 class="doartt1" data-aos="fade-up" data-aos-easing="ease-in-out">Doações | Donaciones | Donations</h2>
+          <h3 class="doartt1" data-aos="fade-up" data-aos-easing="ease-in-out">PIX</h3>
           <div class="doardv0">
             <div class="doardv01">
-              <img class="doarim0" src="images/doar1.webp">
-              <img class="doarim0" src="images/doar2.webp">
-              <img class="doarim0" src="images/doar3.webp">
-              <img class="doarim0" src="images/doar4.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar1.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar2.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar3.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar4.webp">
             </div>
             <div class="doardv1">
               <div class="doardv2">
-                <img class="doarim2" src="images/qrcode.jpeg">
+                <img class="doarim2" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/qrcode.jpeg">
               </div>
               <!--
               <div>
@@ -57,14 +57,14 @@
               -->
             </div>
             <div class="doardv02">
-              <img class="doarim0" src="images/doar5.webp">
-              <img class="doarim0" src="images/doar6.webp">
-              <img class="doarim0" src="images/doar7.webp">
-              <img class="doarim0" src="images/doar8.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar5.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar6.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar7.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="images/doar8.webp">
             </div>
           </div>
         </section>
-        <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
           <img class="whats" src="images/whats.svg">
         </a>
         <div class="loading">
