--- a/EN/en.html
+++ b/EN/en.html
@@ -42,13 +42,13 @@
             Your browser does not support this video.
           </video>
         </div>
-        <h1 class="tt1" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-duration="5000">Social Project<br><br>and Evangelism</h1>
+        <h1 class="tt1" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-duration="5000">Social Project<br><br>and Evangelistic</h1>
       </section>
       <section id="inspiracao">
         <div class="dv1">
-          <h2 class="tt2">INSPIRED BY THE CHRISTIAN FAITH</h2>
-          <span class="separator"></span>
-          <p class="tx1">
+          <h2 class="tt2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRED BY THE CHRISTIAN FAITH</h2>
+          <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+          <p class="tx1" data-aos="fade-up" data-aos-easing="ease-in-out">
             The Projeto Alcançando Vidas Association is dedicated to serving others, bringing God's love to the neediest communities.
             <br>
             <br>
@@ -60,39 +60,39 @@
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">MISSION</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3"data-aos="fade-up" data-aos-easing="ease-in-out">MISSION</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Promote the development and well-being of families in situations of social vulnerability, offering support, resources and training that enable the construction of a dignified and self-sufficient life.
               <br>
               <br>
               Our mission is to build a support network that strengthens community ties and contributes to reducing social inequalities. We seek to provide opportunities for growth and promote autonomy for all the families we serve.
             </p>
           </div>
-          <div class="dv3">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
             <img class="im1" src="../images/1.webp">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">VISION</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">VISION</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               To be a national reference in assistance and support for families in vulnerable situations, contributing to the construction of a more just, inclusive and supportive society.
               <br>
               <br>
               We aspire to a future where all families have access to rights and opportunities, overcoming social barriers and achieving a better quality of life.
             </p>
           </div>
-          <div class="dv3">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
             <img class="im1" src="../images/2.webp">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">VALUES</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">VALUES</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Empathy: We put ourselves in the other person's shoes, seeking to understand and meet the specific needs of each family with respect and sensitivity.
               <br>
               <br>
@@ -102,13 +102,13 @@
               Solidarity: We believe in the strength of the community and the power of unity to overcome challenges and build a more inclusive environment for everyone.
             </p>
           </div>
-          <div class="dv3">
-            <img class="im1" src="../images/10.webp">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
+            <img class="im1" src="../images/3.webp">
           </div>
         </div>
       </section>
       <section id="contato">
-        <div class="dv4">
+        <div class="dv4" data-aos="fade-down" data-aos-easing="ease-in-out">
           <h2 class="tt4">Contact Us</h2>
           <p class="tx4">R. Viracopos - Vila Heliopolis, São Paulo - SP, 04236-070</p>
           <p class="tx4">Mon to Sun from 6:00pm to 10:00pm</p>
@@ -117,14 +117,14 @@
             <a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
               <img class="im4" src="../images/instagram.svg">
             </a>
-            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20would%20like%20to%20know%20more%20about%20the%20project!" target="_blank">
               <img class=im4 src="../images/whatsapp.svg">
             </a>
           </div>
         </div>
-        <iframe class="im41" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="im41" data-aos="fade-down" data-aos-easing="ease-in-out" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
-      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20would%20like%20to%20know%20more%20about%20the%20project!" target="_blank">
         <img class="whats" src="../images/whats.svg">
       </a>
       <div class="loading">
@@ -136,31 +136,31 @@
           <div class="letter">s</div>
         </div>
         <div class="word">
-          <div class="letter">O </div>
-          <div class="letter"> C</div>
-          <div class="letter">a</div>
-          <div class="letter">m</div>
-          <div class="letter">i</div>
-          <div class="letter">n</div>
+          <div class="letter">T</div>
           <div class="letter">h</div>
-          <div class="letter">o</div>
+          <div class="letter">e </div>
+          <div class="letter"> W</div>
+          <div class="letter">a</div>
+          <div class="letter">y</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
-          <div class="letter"> V</div>
-          <div class="letter">e</div>
+          <div class="letter">T</div>
+          <div class="letter">h</div>
+          <div class="letter">e </div>
+          <div class="letter"> T</div>
           <div class="letter">r</div>
-          <div class="letter">d</div>
-          <div class="letter">a</div>
-          <div class="letter">d</div>
-          <div class="letter">e</div>
+          <div class="letter">u</div>
+          <div class="letter">t</div>
+          <div class="letter">h</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
-          <div class="letter"> V</div>
+          <div class="letter">T</div>
+          <div class="letter">h</div>
+          <div class="letter">e </div>
+          <div class="letter"> L</div>
           <div class="letter">i</div>
-          <div class="letter">d</div>
-          <div class="letter">a</div>
+          <div class="letter">f</div>
+          <div class="letter">e</div>
         </div>
         <div class="word"></div>
         <div class="word"></div>
