--- a/ES/contacto.html
+++ b/ES/contacto.html
@@ -36,7 +36,7 @@
 
     <main>
       <section id="contato" class="sc4">
-        <div class="dv4">
+        <div class="dv4" data-aos="fade-down" data-aos-easing="ease-in-out">
           <h2 class="tt4">Contáctenos</h2>
           <p class="tx4">R. Viracopos - Vila Heliopolis, São Paulo - SP, 04236-070</p>
           <p class="tx4">Lun à Dom das 18:00 às 22:00</p>
@@ -45,13 +45,16 @@
             <a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
               <img class="im4" src="../images/instagram.svg">
             </a>
-            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
               <img class=im4 src="../images/whatsapp.svg">
             </a>
           </div>
         </div>
-        <iframe class="im41" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="im41" data-aos="fade-down" data-aos-easing="ease-in-out" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
+      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
+        <img class="whats" src="../images/whats.svg">
+      </a>
       <div class="loading">
         <div class="word">
           <div class="letter">J</div>
@@ -61,27 +64,28 @@
           <div class="letter">s</div>
         </div>
         <div class="word">
-          <div class="letter">O </div>
+          <div class="letter">E</div>
+          <div class="letter">l </div>
           <div class="letter"> C</div>
           <div class="letter">a</div>
           <div class="letter">m</div>
           <div class="letter">i</div>
           <div class="letter">n</div>
-          <div class="letter">h</div>
           <div class="letter">o</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
+          <div class="letter">L</div>
+          <div class="letter">a </div>
           <div class="letter"> V</div>
           <div class="letter">e</div>
           <div class="letter">r</div>
           <div class="letter">d</div>
           <div class="letter">a</div>
           <div class="letter">d</div>
-          <div class="letter">e</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
+          <div class="letter">L</div>
+          <div class="letter">a </div>
           <div class="letter"> V</div>
           <div class="letter">i</div>
           <div class="letter">d</div>
