--- a/ES/donacion.html
+++ b/ES/donacion.html
@@ -36,18 +36,18 @@
    
     <main>
         <section id="doar">
-          <h2 class="doartt1">Doações | Donaciones | Donations</h2>
-          <h3 class="doartt1">PIX</h3>
+          <h2 class="doartt1" data-aos="fade-up" data-aos-easing="ease-in-out">Doações | Donaciones | Donations</h2>
+          <h3 class="doartt1" data-aos="fade-up" data-aos-easing="ease-in-out">PIX</h3>
           <div class="doardv0">
             <div class="doardv01">
-              <img class="doarim0" src="../images/doar1.webp">
-              <img class="doarim0" src="../images/doar10.webp">
-              <img class="doarim0" src="../images/doar13.webp">
-              <img class="doarim0" src="../images/doar25.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar1.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar2.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar3.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar4.webp">
             </div>
             <div class="doardv1">
               <div class="doardv2">
-                <img class="doarim2" src="../images/qrcode.jpeg">
+                <img class="doarim2" data-aos="fade-up" data-aos-easing="ease-in-out" src="../images/qrcode.jpeg">
               </div>
               <!--
               <div>
@@ -57,14 +57,14 @@
               -->
             </div>
             <div class="doardv01">
-              <img class="doarim0" src="../images/doar9.webp">
-              <img class="doarim0" src="../images/doar5.webp">
-              <img class="doarim0" src="../images/doar20.webp">
-              <img class="doarim0" src="../images/doar7.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar5.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar6.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar7.webp">
+              <img class="doarim0" data-aos="fade-down" data-aos-easing="ease-in-out" src="../images/doar8.webp">
             </div>
           </div>
         </section>
-        <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
           <img class="whats" src="../images/whats.svg">
         </a>
         <div class="loading">
@@ -76,27 +76,28 @@
             <div class="letter">s</div>
           </div>
           <div class="word">
-            <div class="letter">O </div>
+            <div class="letter">E</div>
+            <div class="letter">l </div>
             <div class="letter"> C</div>
             <div class="letter">a</div>
             <div class="letter">m</div>
             <div class="letter">i</div>
             <div class="letter">n</div>
-            <div class="letter">h</div>
             <div class="letter">o</div>
           </div>
           <div class="word">
-            <div class="letter">A </div>
+            <div class="letter">L</div>
+            <div class="letter">a </div>
             <div class="letter"> V</div>
             <div class="letter">e</div>
             <div class="letter">r</div>
             <div class="letter">d</div>
             <div class="letter">a</div>
             <div class="letter">d</div>
-            <div class="letter">e</div>
           </div>
           <div class="word">
-            <div class="letter">A </div>
+            <div class="letter">L</div>
+            <div class="letter">a </div>
             <div class="letter"> V</div>
             <div class="letter">i</div>
             <div class="letter">d</div>
