--- a/ES/es.html
+++ b/ES/es.html
@@ -42,13 +42,13 @@
             Su navegador no soporta este vídeo.
           </video>
         </div>
-        <h1 class="tt1" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-duration="5000">Proyecto Social<br><br>y Evangelismo</h1>
+        <h1 class="tt1" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-duration="5000">Proyecto Social<br><br>y Evangélico</h1>
       </section>
       <section id="inspiracao">
         <div class="dv1">
-          <h2 class="tt2">INSPIRADOS EN LA FE CRISTIANA</h2>
-          <span class="separator"></span>
-          <p class="tx1">
+          <h2 class="tt2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRADOS EN LA FE CRISTIANA</h2>
+          <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+          <p class="tx1" data-aos="fade-up" data-aos-easing="ease-in-out">
             La Associação Projeto Alcançando Vidas se dedica a servir a los demás, llevando el amor de Dios a las comunidades más necesitadas.
             <br>
             <br>
@@ -60,39 +60,39 @@
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">MISIÓN</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">MISIÓN</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Promover el desarrollo y bienestar de las familias en situación de vulnerabilidad social, ofreciendo apoyo, recursos y formación que les permitan construir una vida digna y autosuficiente.
               <br>
               <br>
               Nuestra misión es construir una red de apoyo que fortalezca los vínculos comunitarios y contribuya a reducir las desigualdades sociales. Buscamos ofrecer oportunidades de crecimiento y promover la autonomía de todas las familias que atendemos.
             </p>
           </div>
-          <div class="dv3">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
             <img class="im1" src="../images/1.webp">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">VISIÓN</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">VISIÓN</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Ser un referente nacional en atención y apoyo a familias en situación de vulnerabilidad, contribuyendo a la construcción de una sociedad más justa, inclusiva y solidaria.
               <br>
               <br>
               Aspiramos a un futuro donde todas las familias tengan acceso a derechos y oportunidades, superando barreras sociales y logrando una mejor calidad de vida.
             </p>
           </div>
-          <div class="dv3">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
             <img class="im1" src="../images/2.webp">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">VALORES</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">VALORES</h2>
+            <span class="separator"data-aos="fade-up" data-aos-easing="ease-in-out" ></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Empatía: Nos ponemos en el lugar de los demás, buscando comprender y atender las necesidades específicas de cada familia con respeto y sensibilidad.
               <br>
               <br>
@@ -102,13 +102,13 @@
               Solidaridad: Creemos en la fuerza de la comunidad y el poder de la unidad para superar los desafíos y construir un entorno más inclusivo para todos.
             </p>
           </div>
-          <div class="dv3">
-            <img class="im1" src="../images/10.webp">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
+            <img class="im1" src="../images/3.webp">
           </div>
         </div>
       </section>
       <section id="contato">
-        <div class="dv4">
+        <div class="dv4" data-aos="fade-down" data-aos-easing="ease-in-out">
           <h2 class="tt4">Contáctenos</h2>
           <p class="tx4">R. Viracopos - Vila Heliopolis, São Paulo - SP, 04236-070</p>
           <p class="tx4">Lun a Dom de 6:00 pm a 10:00 pm</p>
@@ -117,14 +117,14 @@
             <a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
               <img class="im4" src="../images/instagram.svg">
             </a>
-            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
               <img class=im4 src="../images/whatsapp.svg">
             </a>
           </div>
         </div>
-        <iframe class="im41" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="im41" data-aos="fade-down" data-aos-easing="ease-in-out" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
-      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
         <img class="whats" src="../images/whats.svg">
       </a>
       <div class="loading">
@@ -136,27 +136,28 @@
           <div class="letter">s</div>
         </div>
         <div class="word">
-          <div class="letter">O </div>
+          <div class="letter">E</div>
+          <div class="letter">l </div>
           <div class="letter"> C</div>
           <div class="letter">a</div>
           <div class="letter">m</div>
           <div class="letter">i</div>
           <div class="letter">n</div>
-          <div class="letter">h</div>
           <div class="letter">o</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
+          <div class="letter">L</div>
+          <div class="letter">a </div>
           <div class="letter"> V</div>
           <div class="letter">e</div>
           <div class="letter">r</div>
           <div class="letter">d</div>
           <div class="letter">a</div>
           <div class="letter">d</div>
-          <div class="letter">e</div>
         </div>
         <div class="word">
-          <div class="letter">A </div>
+          <div class="letter">L</div>
+          <div class="letter">a </div>
           <div class="letter"> V</div>
           <div class="letter">i</div>
           <div class="letter">d</div>
