--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 
     <main>
       <section id="sc1">
-        <div data-aos="zoom-out" data-aos-easing="ease-in-out" data-aos-duration="5000" class="video-fundo">
+        <div class="video-fundo">
           <video autoplay loop>
             <source src="images/apav.mp4" type="video/mp4" autoplay>
             Seu navegador não suporta este vídeo.
           </video>
         </div>
-        <h1 class="tt1" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-duration="5000">Projeto Social<br><br>e Evangelismo</h1>
+        <h1 class="tt1" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out">Projeto Social<br><br>e Evangelístico</h1>
       </section>
       <section id="inspiracao">
         <div class="dv1">
-          <h2 class="tt2">INSPIRADOS PELA FÉ CRISTÃ</h2>
-          <span class="separator"></span>
-          <p class="tx1">
+          <h2 class="tt2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRADOS PELA FÉ CRISTÃ</h2>
+          <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+          <p class="tx1" data-aos="fade-up" data-aos-easing="ease-in-out">
             A Associação Projeto Alcançando Vidas dedica-se a servir ao próximo, levando o amor de Deus às comunidades mais necessitadas.
             <br>
             <br>
@@ -60,39 +60,39 @@
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">MISSÃO</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">MISSÃO</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Promover o desenvolvimento e bem-estar de famílias em situação de vulnerabilidade social, oferecendo suporte, recursos e capacitação que possibilitem a construção de uma vida digna e autossuficiente.
               <br>
               <br>
               Nossa missão é construir uma rede de apoio que fortaleça os vínculos comunitários e contribua para a redução das desigualdades sociais. Buscamos oferecer oportunidades de crescimento e promover a autonomia de todas as famílias que atendemos.
             </p>
           </div>
-          <div class="dv3">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
             <img class="im1" src="images/1.webp">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">VISÃO</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">VISÃO</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Ser uma referência nacional em assistência e apoio a famílias em situação de vulnerabilidade, contribuindo para a construção de uma sociedade mais justa, inclusiva e solidária.
               <br>
               <br>
               Aspiramos um futuro onde todas as famílias tenham acesso a direitos e oportunidades, superando barreiras sociais e alcançando uma melhor qualidade de vida.
             </p>
           </div>
-          <div class="dv3">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
             <img class="im1" src="images/2.webp">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">VALORES</h2>
-            <span class="separator"></span>
-            <p class="tx2">
+            <h2 class="tt3" data-aos="fade-up" data-aos-easing="ease-in-out">VALORES</h2>
+            <span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+            <p class="tx2" data-aos="fade-up" data-aos-easing="ease-in-out">
               Empatia: Colocamo-nos no lugar do outro, buscando compreender e atender às necessidades específicas de cada família com respeito e sensibilidade.
               <br>
               <br>
@@ -102,13 +102,13 @@
               Solidariedade: Acreditamos na força da comunidade e no poder da união para superar desafios e construir um ambiente mais inclusivo para todos.
             </p>
           </div>
-          <div class="dv3">
+          <div class="dv3" data-aos="fade-up" data-aos-easing="ease-in-out">
             <img class="im1" src="images/3.webp">
           </div>
         </div>
       </section>
       <section id="contato">
-        <div class="dv4">
+        <div class="dv4" data-aos="fade-down" data-aos-easing="ease-in-out">
           <h2 class="tt4">Fale Conosco</h2>
           <p class="tx4">R. Viracopos - Vila Heliopolis, São Paulo - SP, 04236-070</p>
           <p class="tx4">Seg à Dom das 18:00 às 22:00</p>
@@ -117,14 +117,14 @@
             <a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
               <img class="im4" src="images/instagram.svg">
             </a>
-            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
               <img class=im4 src="images/whatsapp.svg">
             </a>
           </div>
         </div>
-        <iframe class="im41" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="im41" data-aos="fade-down" data-aos-easing="ease-in-out" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
-      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
         <img class="whats" src="images/whats.svg">
       </a>
       <div class="loading">
