--- a/sobre.html
+++ b/sobre.html
@@ -37,18 +37,18 @@
     <main>
       <section>
         <div class="sobredv">
-          <div data-aos="zoom-out" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobredv0">
+          <div class="sobredv0">
             <img class="sobrehero" src="images/bg3.webp">
           </div>
-          <h2 data-aos="flip-left" data-aos-delay="700" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobrett1">Sobre Nós</h2>
+          <h2 data-aos="flip-left" data-aos-delay="700" data-aos-easing="ease-in-out" class="sobrett1">Sobre Nós</h2>
         </div>
         <div class="sobredv1">
           <div class="sobredv12">
-            <p class="sobretx">A APAV - Associação Alcançando Vidas é uma iniciativa missionária e humanitária dedicada a levar amor, epserança e transformação àqueles que mais necessitam. Fundada com o propósito de compartilhar o evangelho de Jesus Cristo, a APAV atua junto a pessoas em situação de extrema vulnerabilidade, incluindo moradores em situação de rua, ex-dependentes químicos, povos indígenas, sertanejos, quilombolas e diversos outros povos carentes ao redor do mundo.</Video></p>
+            <p class="sobretx" data-aos="fade-up" data-aos-easing="ease-in-out">A APAV - Associação Alcançando Vidas é uma iniciativa missionária e humanitária dedicada a levar amor, epserança e transformação àqueles que mais necessitam. Fundada com o propósito de compartilhar o evangelho de Jesus Cristo, a APAV atua junto a pessoas em situação de extrema vulnerabilidade, incluindo moradores em situação de rua, ex-dependentes químicos, povos indígenas, sertanejos, quilombolas e diversos outros povos carentes ao redor do mundo.</Video></p>
           </div>
           <div id="presta">
-            <h2 class="subtitulo" style="margin:5vw 0 0 0;color:#FFFFFF">NOSSO DIA A DIA</h2>
-            <div class="slideres">
+            <h2 class="subtitulo" data-aos="fade-up" data-aos-easing="ease-in-out">NOSSO DIA A DIA</h2>
+            <div class="slideres" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="slide-track">
                     <div class="slides"><img class="slidesimages" src="images/carrousel/1.webp" alt="IMAGEM 1"></div>
                     <div class="slides"><img class="slidesimages" src="images/carrousel/2.webp" alt="IMAGEM 2"></div>
@@ -86,52 +86,52 @@
             </div>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Além disso, a Associação conta com uma equipe de voluntários da área da saúde, que oferece atendimento em nosso consultório para dar suporte a essas famílias. Entre os profissionais, temos médicos, psicólogos e fonoaudiólogos. Para além da assistência imediata, a Associação busca sempre maneiras de reintegrar essas pessoas à sociedade, proporcionando novos objetivos e esperanças por meio do trabalho.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Além disso, a Associação conta com uma equipe de voluntários da área da saúde, que oferece atendimento em nosso consultório para dar suporte a essas famílias. Entre os profissionais, temos médicos, psicólogos e fonoaudiólogos. Para além da assistência imediata, a Associação busca sempre maneiras de reintegrar essas pessoas à sociedade, proporcionando novos objetivos e esperanças por meio do trabalho.</p>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Com ações realizadas em países como Brasil, Bolívia, Paraguai, Chile, África, entre outros, o Projeto Alcançando Vidas se dedica a alcançar os recantos mais remotos e as populações mais marginalizadas. Através de visitas, distribuição de alimentos, roupas, e serviços médicos, o projeto se empenha em fazer a diferença na vida daqueles que vivem nas ruas ou em condições de extrema pobreza.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Com ações realizadas em países como Brasil, Bolívia, Paraguai, Chile, África, entre outros, o Projeto Alcançando Vidas se dedica a alcançar os recantos mais remotos e as populações mais marginalizadas. Através de visitas, distribuição de alimentos, roupas, e serviços médicos, o projeto se empenha em fazer a diferença na vida daqueles que vivem nas ruas ou em condições de extrema pobreza.</p>
           </div>
           <div class="sobredv2">
             <div class="sobredv21">
-              <img class="sobreim3" src="images/brazil.svg">
-              <h3 class="tt5">Brasil</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/brazil.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Brasil</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="images/bolivia.svg">
-              <h3 class="tt5">Bolívia</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/bolivia.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Bolívia</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="images/paraguai.svg">
-              <h3 class="tt5">Paraguai</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/paraguai.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Paraguai</h3>
             </div>
             <div class="sobredv21">
-              <img class="sobreim3" src="images/chile.svg">
-              <h3 class="tt5">Chile</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/chile.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Chile</h3>
             </div>
             <div class="sobredv212">
-              <img class="sobreim3" src="images/africa.svg">
-              <h3 class="tt5">Continente Africano</h3>
+              <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/africa.svg">
+              <h3 class="tt5" data-aos="fade-up" data-aos-easing="ease-in-out">Continente Africano</h3>
             </div>
           </div>
           
           <div class="sobredv4">
-            <p class="sobretx1">Os voluntários/ missionários são o coração deste projeto, movidos pelo amor e pelo desejo genuíno de ajudar o próximo tendo espelho Cristo que não fez acepção de ninguém. Com dedicação e compaixão, eles oferecem seu tempo, talentos e esforços para transformar vidas, sem esperar nada em troca. Seu compromisso vai além da assistência; eles levam esperança, conforto e dignidade àqueles que mais precisam. Cada gesto, por menor que seja, reflete o verdadeiro significado do amor ao próximo e faz a diferença na caminhada de quem busca uma nova chance.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Os voluntários/ missionários são o coração deste projeto, movidos pelo amor e pelo desejo genuíno de ajudar o próximo tendo espelho Cristo que não fez acepção de ninguém. Com dedicação e compaixão, eles oferecem seu tempo, talentos e esforços para transformar vidas, sem esperar nada em troca. Seu compromisso vai além da assistência; eles levam esperança, conforto e dignidade àqueles que mais precisam. Cada gesto, por menor que seja, reflete o verdadeiro significado do amor ao próximo e faz a diferença na caminhada de quem busca uma nova chance.</p>
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Com uma abordagem centrada no amor e no sacrifício de Jesus, que deu sua vida para salvar a humanidade, a Associação busca alcançar aqueles que, muitas vezes, são esquecidos pela sociedade. O objetivo não é apenas oferecer consolo espiritual, mas também restaurar a dignidade e promover a transformação por meio do apoio assistencial.</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Com uma abordagem centrada no amor e no sacrifício de Jesus, que deu sua vida para salvar a humanidade, a Associação busca alcançar aqueles que, muitas vezes, são esquecidos pela sociedade. O objetivo não é apenas oferecer consolo espiritual, mas também restaurar a dignidade e promover a transformação por meio do apoio assistencial.</p>
           </div>
           <div class="sobredv3">
-            <img class="sobreim3" src="images/christ.svg">
-            <img class="sobreim3" src="images/equal.svg">
-            <img class="sobreim3" src="images/heartchrist.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/christ.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/equal.svg">
+            <img class="sobreim3" data-aos="fade-up" data-aos-easing="ease-in-out" src="images/heartchrist.svg">
           </div>
           <div class="sobredv4">
-            <p class="sobretx1">Junte-se a nós nessa missão de transformação! Unidos, podemos impactar a vida de milhares de pessoas, levando esperança, renovação e o amor de Cristo àqueles que mais precisam. Faça parte dessa mudança!</p>
+            <p class="sobretx1" data-aos="fade-up" data-aos-easing="ease-in-out">Junte-se a nós nessa missão de transformação! Unidos, podemos impactar a vida de milhares de pessoas, levando esperança, renovação e o amor de Cristo àqueles que mais precisam. Faça parte dessa mudança!</p>
           </div>
-          <a class="sobrebt">QUERO SER UM VOLUNTÁRIO<br><img class="sobreim2" src="images/heart.svg"></a>
+          <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20quero%20ser%20voluntário%20do%20projeto,%20como%20posso%20me%20candidatar?" class="sobrebt" target="_blank" data-aos="fade-up" data-aos-easing="ease-in-out">QUERO SER UM VOLUNTÁRIO<br><img class="sobreim2" src="images/heart.svg"></a>
         </div>
       </section>
-      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
         <img class="whats" src="images/whats.svg">
       </a>
       <div class="loading">
