--- a/EN/header.html
+++ b/EN/header.html
@@ -25,9 +25,9 @@
 		<li class="ls_li"><a class="ls_nv" href="donate.html">DONATE NOW<img class="ls_im" src="../assets/images/botoes/doar.svg"></a></li>
 		<li class="ls_la">LANGUAGE<img class="ls_im" src="../assets/images/botoes/language.svg">
 			<ul class="ls_ls">
-				<li class="ls_ls_li"><a class="ls_nv" href="../"><img class="ls_im" src="../assets/images/botoes/br.svg">PT/BR</a></li>
-				<li class="ls_ls_li"><a class="ls_nv" href="en.html"><img class="ls_im" src="../assets/images/botoes/en.svg">EN</a></li>
-				<li class="ls_ls"><a class="ls_nv" href="../ES/es.html"><img class="ls_im" src="../assets/images/botoes/es.svg">ES</a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="../">PT/BR<img class="ls_im" src="../assets/images/botoes/br.svg"></a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="en.html">EN<img class="ls_im" src="../assets/images/botoes/en.svg"></a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="../ES/es.html">ES<img class="ls_im" src="../assets/images/botoes/es.svg"></a></li>
 			</ul>
 		</li>
 	</ul>
