--- a/ES/donacion.html
+++ b/ES/donacion.html
@@ -28,11 +28,11 @@
 				<h2 class="da_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Doações | Donaciones | Donations</h2>
 				<h3 class="da_tt" data-aos="fade-up" data-aos-easing="ease-in-out">PIX</h3>
 				<div class="da_ft_dv">
-					<div class="da_sd_dv">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar1.webp">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar2.webp">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar3.webp">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar4.webp">
+					<div class="da_sd_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
+						<img class="da_ft_im" src="../assets/images/doar1.webp">
+						<img class="da_ft_im" src="../assets/images/doar2.webp">
+						<img class="da_ft_im" src="../assets/images/doar3.webp">
+						<img class="da_ft_im" src="../assets/images/doar4.webp">
 					</div>
 					<div class="da_td_dv">
 						<div class="da_fo_dv">
@@ -45,11 +45,11 @@
               </div>
               -->
 					</div>
-					<div class="da_ff_dv">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar5.webp">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar6.webp">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar7.webp">
-						<img class="da_ft_im" data-aos="fade-down" data-aos-easing="ease-in-out" src="../assets/images/doar8.webp">
+					<div class="da_ff_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
+						<img class="da_ft_im" src="../assets/images/doar5.webp">
+						<img class="da_ft_im" src="../assets/images/doar6.webp">
+						<img class="da_ft_im" src="../assets/images/doar7.webp">
+						<img class="da_ft_im" src="../assets/images/doar8.webp">
 					</div>
 				</div>
 			</section>
