--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
 			</ul>
 		</li>
 	</ul>
-	<div id="mn_dv" onclick="toggleMenu()"><img src="assets/images/botoes/menu.svg" id="mn"></div>
+	<div id="mn_dv" onclick="toggleMenu()"><img id="mn" src="assets/images/botoes/menu.svg"></div>
 	<ul id="lsm">
 		<li class="ls_li"><a class="ls_nv" href="/">HOME<img class="ls_im" src="assets/images/botoes/home.svg"></a></li>
 		<li class="ls_li"><a class="ls_nv" href="sobre.html">SOBRE NÓS<img class="ls_im" src="assets/images/botoes/sobre.svg"></a></li>
@@ -25,9 +25,9 @@
 		<li class="ls_li"><a class="ls_nv" href="doar.html">DOE AGORA<img class="ls_im" src="assets/images/botoes/doar.svg"></a></li>
 		<li class="ls_la">LINGUAGEM<img class="ls_im" src="assets/images/botoes/language.svg">
 			<ul class="ls_ls">
-				<li class="ls_ls_li"><a class="ls_nv" href="/"><img class="ls_im" src="assets/images/botoes/br.svg">PT/BR</a></li>
-				<li class="ls_ls_li"><a class="ls_nv" href="EN/en.html"><img class="ls_im" src="assets/images/botoes/en.svg">EN</a></li>
-				<li class="ls_ls"><a class="ls_nv" href="ES/es.html"><img class="ls_im" src="assets/images/botoes/es.svg">ES</a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="/">PT/BR<img class="ls_im" src="assets/images/botoes/br.svg"></a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="EN/en.html">EN<img class="ls_im" src="assets/images/botoes/en.svg"></a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="ES/es.html">ES<img class="ls_im" src="assets/images/botoes/es.svg"></a></li>
 			</ul>
 		</li>
 	</ul>
