--- a/sobre.html
+++ b/sobre.html
@@ -117,7 +117,7 @@
 					<div class="sb_fo_dv">
 						<p class="sb_fo_tx" data-aos="fade-up" data-aos-easing="ease-in-out">Junte-se a nós nessa missão de transformação! Unidos, podemos impactar a vida de milhares de pessoas, levando esperança, renovação e o amor de Cristo àqueles que mais precisam. Faça parte dessa mudança!</p>
 					</div>
-					<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20quero%20ser%20voluntário%20do%20projeto,%20como%20posso%20me%20candidatar?" target="_blank" data-aos="fade-up" data-aos-easing="ease-in-out">QUERO SER UM VOLUNTÁRIO<br><img class="sb_bt_im" src="assets/images/heart.svg"></a>
+					<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20quero%20ser%20voluntário%20do%20projeto,%20como%20posso%20me%20candidatar?" target="_blank">QUERO SER UM VOLUNTÁRIO<br><img class="sb_bt_im" src="assets/images/heart.svg"></a>
 				</div>
 			</section>
 			<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
